--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-1).	split the drag restricing is key pressed into x & y functions 
+1).	split the drag restricing is key pressed into x & y functions --- done
